removed motorcycle and bus profiles
