# csharp/src/IO.Swagger/Api/MatrixApi.cs
@@ -36,7 +36,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>MatrixResponse</returns>
         MatrixResponse MatrixGet (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null);
 
@@ -52,7 +52,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>ApiResponse of MatrixResponse</returns>
         ApiResponse<MatrixResponse> MatrixGetWithHttpInfo (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null);
         /// <summary>
@@ -92,7 +92,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>Task of MatrixResponse</returns>
         System.Threading.Tasks.Task<MatrixResponse> MatrixGetAsync (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null);
 
@@ -108,7 +108,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>Task of ApiResponse (MatrixResponse)</returns>
         System.Threading.Tasks.Task<ApiResponse<MatrixResponse>> MatrixGetAsyncWithHttpInfo (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null);
         /// <summary>
@@ -255,7 +255,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>MatrixResponse</returns>
         public MatrixResponse MatrixGet (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null)
         {
@@ -272,7 +272,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>ApiResponse of MatrixResponse</returns>
         public ApiResponse< MatrixResponse > MatrixGetWithHttpInfo (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null)
         {
@@ -340,7 +340,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>Task of MatrixResponse</returns>
         public async System.Threading.Tasks.Task<MatrixResponse> MatrixGetAsync (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null)
         {
@@ -358,7 +358,7 @@ namespace IO.Swagger.Api
         /// <param name="fromPoint">The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="toPoint">The destination points for the routes. Is a string with the format latitude,longitude. (optional)</param>
         /// <param name="outArray">Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)</param>
-        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)</param>
+        /// <param name="vehicle">The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)</param>
         /// <returns>Task of ApiResponse (MatrixResponse)</returns>
         public async System.Threading.Tasks.Task<ApiResponse<MatrixResponse>> MatrixGetAsyncWithHttpInfo (string key, List<string> point = null, string fromPoint = null, string toPoint = null, List<string> outArray = null, string vehicle = null)
         {
