# swift/GraphHopper/Classes/Swaggers/APIs/MatrixAPI.swift
@@ -18,7 +18,7 @@ public class MatrixAPI: APIBase {
      - parameter fromPoint: (query) The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)
      - parameter toPoint: (query) The destination points for the routes. Is a string with the format latitude,longitude. (optional)
      - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
-     - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)
+     - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)
      - parameter completion: completion handler to receive the data and the error objects
      */
     public class func matrixGet(key key: String, point: [String]? = nil, fromPoint: String? = nil, toPoint: String? = nil, outArray: [String]? = nil, vehicle: String? = nil, completion: ((data: MatrixResponse?, error: ErrorType?) -> Void)) {
@@ -47,7 +47,7 @@ public class MatrixAPI: APIBase {
      - parameter fromPoint: (query) The starting points for the routes. E.g. if you want to calculate the three routes A-&amp;gt;1, A-&amp;gt;2, A-&amp;gt;3 then you have one from_point parameter and three to_point parameters. Is a string with the format latitude,longitude. (optional)
      - parameter toPoint: (query) The destination points for the routes. Is a string with the format latitude,longitude. (optional)
      - parameter outArray: (query) Specifies which arrays should be included in the response. Specify one or more of the following options &#39;weights&#39;, &#39;times&#39;, &#39;distances&#39;. To specify more than one array use e.g. out_array&#x3D;times&amp;out_array&#x3D;distances. The units of the entries of distances are meters, of times are seconds and of weights is arbitrary and it can differ for different vehicles or versions of this API. (optional)
-     - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, bike, mtb, racingbike, motorcycle, small_truck, bus and truck. See here for the details. (optional, default to car)
+     - parameter vehicle: (query) The vehicle for which the route should be calculated. Other vehicles are foot, small_truck etc, see here for the details. (optional, default to car)
 
      - returns: RequestBuilder<MatrixResponse> 
      */
